k8s/apps/port-front/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: port-front
  namespace: apps
  labels:
    app: port-front
    type: frontends
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 2
  selector:
    matchLabels:
      app: port-front
  template:
    metadata:
      labels:
        app: port-front
    spec:
      # securityContext:
      #   runAsNonRoot: true
      #   runAsUser: 1009
      #   runAsGroup: 2009
      #   fsGroup: 3009
      #   fsGroupChangePolicy: OnRootMismatch
      #   seccompProfile:
      #     type: RuntimeDefault

      imagePullSecrets:
        - name: pull-secret

      containers:
        - name: port-front
          image: ghcr.io/therayquaza/newsbro/port-front:port-front-v1.6.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              memory: "256Mi"
              cpu: "125m"
            limits:
              memory: "1Gi"
              cpu: "250m"

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
