k8s/apps/port-front/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: port-front-network-policy
  namespace: apps
spec:
  podSelector:
    matchLabels:
      app: port-front
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from: # Allow public ingress
        - namespaceSelector:
            matchLabels:
              kubernetes.io/instance: ingress-nginx-public
      ports:
        - protocol: TCP
          port: 8080
    - from: # Allow probe
        - ipBlock:
            cidr: 10.42.0.0/16
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
